grammar.js
    source_file: $ => repeat($._definition),

    // ---------------------------------------------------------------------
    // Top-level definitions  (prolang.y `def`, line ~9790)
    // ---------------------------------------------------------------------

    _definition: $ => choice(
      $.function_definition,
      $.global_var,
      $.struct_definition,
      $.inheritance,
      $.default_visibility,
      $.preproc_include,
      $.preproc_def,
      $.preproc_function_def,
      $.preproc_undef,
      $.preproc_pragma,
      $.preproc_if,
      $.preproc_ifdef,
      $.preproc_call,
    ),

    // ---------------------------------------------------------------------
    // Preprocessor (handled in lex.c, but we expose a tree-sitter-c-style
    // approximation so editors can navigate). Adapted from tree-sitter-c.
    // ---------------------------------------------------------------------

    _preproc_expression: $ => choice(
      $.identifier,
      $.number_literal,
      $.string_literal,
      $.preproc_defined,
      alias($.preproc_unary_expression, $.unary_expression),
      alias($.preproc_binary_expression, $.binary_expression),
      alias($.preproc_parenthesized_expression, $.parenthesized_expression),
      alias($.preproc_call_expression, $.function_call),
    ),

    function_definition: $ => seq(
      optional($.async_modifier),
      repeat($.type_modifier),
      field('type', optional($._basic_type)),
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      field('body', choice($.block, ';')),
    ),

    parameter_list: $ => seq(
      '(',
      choice(
        commaSep($.parameter),
        'void',
      ),
      ')',
    ),

    // prolang.y `new_arg_name` (line 11176): `non_void_type L_IDENTIFIER
    // opt_default_value`. The basic-type half of `non_void_type` is
    // optional (defaults to mixed). See `t-language/ti-types.c` for
    // typeless params. `varargs` is technically part of
    // `type_modifier_list` (the only modifier the driver lets through);
    // we surface it as its own slot since real usage is always a single
    // `varargs` prefix.
    parameter: $ => seq(
      optional('varargs'),
      field('type', optional($.non_void_type)),
      field('name', $.identifier),
      optional(seq('=', field('default', $._expression))),
    ),

    // ---------------------------------------------------------------------
    // Globals: `int x, *y, z = 1;`: type then comma-separated names, each
    // with optional `*`-prefix (legacy pointer-array decl) and initializer.
    // ---------------------------------------------------------------------

    global_var: $ => seq(
      repeat($.type_modifier),
      field('type', $._basic_type),
      commaSep1($._global_declarator),
      ';',
    ),

    _global_declarator: $ => seq(
      repeat('*'),
      field('name', $.identifier),
      optional(seq('=', field('value', $._expression))),
    ),

    // ---------------------------------------------------------------------
    // Structs: prolang.y `struct_decl` (line 10434) covers forward-decl
    // (`struct foo;`), full def (`struct foo { ... }`), and base-struct
    // extension (`struct foo (bar) { ... }`).
    // ---------------------------------------------------------------------

    struct_definition: $ => seq(
      repeat($.type_modifier),
      'struct',
      field('name', $.identifier),
      optional($.struct_member_list),
      ';',
    ),

    inheritance: $ => seq(
      repeat(choice(
        $.type_modifier,
        $.inheritance_modifier,
        $.inheritance_scope,
      )),
      'inherit',
      field('source', $._string_constant),
      ';',
    ),

    // prolang.y line 13207. Adjacent string literals (`"a" "b"`, no `+`)
    // are also valid, but lex.c handles them by concatenating tokens
    // before bison sees the result (see prolang.y:13217 fatal). Our
    // `concatenated_string` covers the adjacent form; this rule covers
    // the explicit `+` and parenthesised forms. `+` is left-associative
    // per the bison rule `string_constant '+' L_STRING` (left-recursive).
    _string_constant: $ => choice(
      $.string_literal,
      $.concatenated_string,
      $.identifier,                              // macro stand-in
      prec.left(seq($._string_constant, '+', $._string_constant)),
      seq('(', $._string_constant, ')'),
    ),

    inheritance_scope: $ => choice('variables', 'functions', 'structs'),

    default_visibility: $ => seq(
      'default',
      repeat(choice(
        $.type_modifier,
        $.inheritance_scope,
      )),
      ';',
    ),

    // ---------------------------------------------------------------------
    // Types — prolang.y line 10948.
    //
    //   non_void_type = type_modifier_list opt_basic_non_void_type
    //   basic_non_void_type = single_basic_non_void_type ('|' single...)*
    //   single_basic_non_void_type = atom | single...'*' | '<' non_void_type '>'
    //
    // `void` is only allowed at the top of `basic_type` (return type /
    // parameter list "void"); arrays (`*`) and unions (`|`) are not.
    // ---------------------------------------------------------------------

    type_modifier: $ => choice(
      'nomask',
      'static',
      'private',
      'public',
      'varargs',
      'protected',
      'nosave',
      'deprecated',
      'visible',
    ),

    async_modifier: $ => 'async',

    _basic_type: $ => choice(
      $.non_void_type,
      'void',
    ),

    non_void_type: $ => sep1('|', $._single_non_void_type),

    _single_non_void_type: $ => choice(
      $._atomic_type,
      prec.left(seq($._single_non_void_type, '*')),
    ),

    block: $ => seq('{', repeat($._statement), '}'),

    _statement: $ => choice(
      $.expression_statement,
      $.local_var_decl,
      $.return_statement,
      $.if_statement,
      $.while_statement,
      $.do_statement,
      $.for_statement,
      $.foreach_statement,
      $.switch_statement,
      $.break_statement,
      $.continue_statement,
      $.block,
      ';',
      $.preproc_if_in_statement,
      $.preproc_ifdef_in_statement,
      // Leaf preprocessor directives mid-function. `#pragma` flips a
      // parser-state flag in the LDMud driver; we don't honor the
      // semantic effect, but it has to *parse*. Real-world LPC also
      // has stray `#define` / `#undef` / `#include` mid-function.
      $.preproc_def,
      $.preproc_function_def,
      $.preproc_undef,
      $.preproc_pragma,
      $.preproc_include,
    ),

    expression_statement: $ => seq($._comma_expression, ';'),

    local_var_decl: $ => seq(
      field('type', $._basic_type),
      commaSep1($._local_declarator),
      ';',
    ),

    _local_declarator: $ => seq(
      repeat('*'),
      field('name', $.identifier),
      optional(seq('=', field('value', $._expression))),
    ),

    return_statement: $ => seq(
      'return',
      optional($._comma_expression),
      ';',
    ),

    do_statement: $ => seq(
      'do',
      field('body', $._statement),
      'while',
      '(', field('condition', $._comma_expression), ')',
      ';',
    ),

    for_statement: $ => seq(
      'for', '(',
      field('init', optional($._for_init)),
      ';',
      field('condition', optional($._comma_expression)),
      ';',
      field('update', optional($._comma_expression)),
      ')',
      field('body', $._statement),
    ),

    // prolang.y `for_init_expr` (line 12182) → `comma_expr_decl` (line
    // 12194), where each comma-separated element is either an `expr0`
    // or a `local_name_lvalue ('=' expr0)?` typed declaration. Each
    // element carries its own type, so `for(int i = 0, int j; ...; ...)`
    // is valid LPC (surfaced by the dunemud lib).
    //
    // The single-type form `for(type d1, d2; ...)` is a dedicated shape
    // — when every declarator shares a type, the tree mirrors a
    // `local_var_decl` for parity. The mixed form admits each item as
    // either an expression or a typed `for_init_decl`.
    _for_init: $ => choice(
      // Dynamic prec: when the for-init can be parsed *both* as a
      // single-type list of declarators AND as the mixed-type list, we
      // prefer the single-type shape (cleaner tree, matches the
      // existing corpus). `prec.dynamic` resolves at parse time so the
      // mixed-type form still wins when it's the only valid parse
      // (e.g. the second item has its own type or is a bare expression).
      prec.dynamic(1, seq(
        field('type', $._basic_type),
        commaSep1($._local_declarator),
      )),
      commaSep1($._for_init_item),
    ),

    for_init_decl: $ => seq(
      field('type', $._basic_type),
      $._local_declarator,
    ),

    foreach_statement: $ => seq(
      'foreach', '(',
      field('vars', sep1(',', $._foreach_var)),
      choice(':', 'in'),
      field('source', choice($._expression, $.foreach_range)),
      ')',
      field('body', $._statement),
    ),

    _foreach_var: $ => choice(
      $.identifier,
      seq(
        field('type', $._basic_type),
        repeat('*'),
        field('name', $.identifier),
      ),
    ),

    // `lower .. upper` form of foreach source. Distinct from the range
    // syntax used in subscripts (`x[a..b]`) and in switch case ranges.
    _comma_expression: $ => prec.left(PREC.COMMA, commaSep1($._expression)),

    _expression: $ => choice(
      $.assignment_expression,
      $.conditional_expression,
      $.binary_expression,
      $.unary_expression,
      $.update_expression,
      $.cast_expression,
      $.decl_cast_expression,
      $.lvalue_ref_expression,
      $._expr_primary,
    ),

    assignment_expression: $ => prec.right(PREC.ASSIGNMENT, seq(
      field('left', $._expression),
      field('operator', $.assignment_operator),
      field('right', $._expression),
    )),

    assignment_operator: $ => choice(
      '=', '*=', '/=', '%=', '+=', '-=',
      '<<=', '>>=', '>>>=',
      '&=', '&&=', '^=', '|=', '||=',
    ),

    conditional_expression: $ => prec.right(PREC.CONDITIONAL, seq(
      field('condition', $._expression),
      '?',
      field('consequence', $._expression),
      ':',
      field('alternative', $._expression),
    )),

    // All LPC binary operators are left-associative (prolang.y line 9577,
    // every relevant token under `%left`).
    binary_expression: $ => {
      const table = [
        ['||',  PREC.LOGICAL_OR],
        ['&&',  PREC.LOGICAL_AND],
        ['|',   PREC.INCLUSIVE_OR],
        ['^',   PREC.EXCLUSIVE_OR],
        ['&',   PREC.BITWISE_AND],
        ['==',  PREC.EQUAL],
        ['!=',  PREC.EQUAL],
        ['in',  PREC.EQUAL],
        ['<',   PREC.RELATIONAL],
        ['<=',  PREC.RELATIONAL],
        ['>',   PREC.RELATIONAL],
        ['>=',  PREC.RELATIONAL],
        ['<<',  PREC.SHIFT],
        ['>>',  PREC.SHIFT],
        ['>>>', PREC.SHIFT],
        ['+',   PREC.ADD],
        ['-',   PREC.ADD],
        ['*',   PREC.MULTIPLY],
        ['/',   PREC.MULTIPLY],
        ['%',   PREC.MULTIPLY],
      ];
      return choice(...table.map(([op, p]) =>
        prec.left(p, seq(
          field('left', $._expression),
          field('operator', op),
          field('right', $._expression),
        ))));
    },

    unary_expression: $ => prec.right(PREC.UNARY, seq(
      field('operator', choice('!', '~', '-', '+')),
      field('argument', $._expression),
    )),

    update_expression: $ => {
      const arg = field('argument', $._expression);
      const op = field('operator', choice('--', '++'));
      return choice(
        prec.right(PREC.UNARY, seq(op, arg)),
        prec.left(PREC.POSTFIX, seq(arg, op)),
      );
    },

    // prolang.y `cast` (line 11074): `'(' single_basic_non_void_type ')'`.
    // `void` is not accepted; a bare union must wrap in `<...>`, e.g.
    // `(<int|string>)x`. We type the field as `non_void_type` (which is a
    // single type or a `|`-union), slightly looser than prolang.y, but
    // the union-without-`<...>` case is a semantic concern, not syntax.
    cast_expression: $ => prec.right(PREC.CAST, seq(
      '(', field('type', $.non_void_type), ')',
      field('value', $._expression),
    )),

    // Decl-cast: `({ type })` value. prolang.y comments mark this as
    // candidate for removal but it's still parsed (line 11081).
    decl_cast_expression: $ => prec.right(PREC.CAST, seq(
      '(', '{', field('type', $._basic_type), '}', ')',
      field('value', $._expression),
    )),

    function_call: $ => prec(PREC.CALL, seq(
      field('function', choice(
        $.identifier,
        $.scoped_function_name,
      )),
      field('arguments', $.argument_list),
    )),

    argument_list: $ => seq(
      '(',
      aggregateBody(seq($._expression, optional('...')), $),
      ')',
    ),

    // Higher precedence than `member_access` so that `obj->fun(...)`
    // shifts `(` into the call rather than reducing to a bare member
    // access. (Surfaced once `_aggregate_slot` allowed bare-expression
    // slots without a trailing comma to disambiguate.)
    await_expression: $ => seq(
      'await', '(', $._expression, optional(seq(',', $._expression)), ')',
    ),

    yield_expression: $ => seq(
      'yield', '(',
      optional(seq($._expression, optional(seq(',', $._expression)))),
      ')',
    ),

    // ----- Closures and inline functions -----

    // prolang.y `inline_func` (line 10063):
    //   inline_opt_async L_FUNC inline_opt_type inline_opt_args
    //                                          inline_opt_context inline_block
    // `inline_opt_args` is either empty (synthesizing $1..$9 implicits)
    // or `'(' argument ')'`, so the parameter list is *optional*. Body is
    // always a block — no prototype form.
    inline_closure: $ => seq(
      '(', token.immediate(':'),
      repeat($._statement),
      commaSep($._expression),
      ':', token.immediate(')'),
    ),

    // `#'<thing>` closure. lex.c's closure() emits a single L_CLOSURE
    // token covering the whole form, so we tokenize as one atom too —
    // avoids ambiguity with `#` preproc and `'` symbols. The full
    // operator-closure list is lex.c symbol_operator (lines 1148–1677);
    // longest-match in the tokenizer DFA handles ordering.
    closure: $ => $._closure_token,
    array_literal: $ => seq(
      '(', '{',
      aggregateBody($._expression, $),
      '}', ')',
    ),

    // `'({ ... })` — quoted aggregate (lex.c ~6223). One or more `'`
    // glued to `({` opens the form; the quote count is preserved at
    // runtime but doesn't change parse shape. Distinct from `#'({` which
    // is the AGGREGATE operator-closure (lex.c symbol_operator:1648).
    empty_mapping_literal: $ => seq(
      '(', '[',
      ':',
      field('width', $._expression),
      ']', ')',
    ),

    struct_literal: $ => seq(
      '(', '<',
      field('type', $.struct_name),
      '>',
      aggregateBody(choice($.struct_field_init, $._expression), $),
      ')',
    ),

    // prolang.y `struct_name` (line 17264) — same shape as
    // `_function_name`: bare identifier, leading `::name` for the next
    // outer same-named struct, or `scope::name` where scope is `efun` /
    // `sefun`.
    struct_name: $ => choice(
      $.identifier,
      seq('::', $.identifier),
      seq($.identifier, '::', $.identifier),
    ),

    identifier: $ => /[\p{L}_$][\p{L}\p{N}_$]*/u,

    // lex.c ~line 6428: int (decimal/0x/0o/0b) or float (1.0, .5, 1e10).
    // Trailing-dot floats (`4.`) are deliberately rejected as a token.
    // lex.c only treats `.` as a float separator when not followed by
    // another `.`, and we can't express that lookahead in a token regex.
    // Forbidding `4.` lets `1..5` lex correctly as `1`, `..`, `5`.
    bytes_literal: $ => seq(
      'b"',
      repeat(choice(
        token.immediate(prec(1, /[^\\"\n]+/)),
        $.escape_sequence,
      )),
      '"',
    ),
