test/corpus/array_literal.txt
================================================================================
Array Literal Test
================================================================================

int *x = ({ 10, 20, 30 });

--------------------------------------------------------------------------------

(source_file
  (global_var
    (non_void_type)
    (identifier)
    (array_literal
      (number_literal)
      (number_literal)
      (number_literal))))
