test/corpus/bracket_pointer_typed_function.txt
================================================================================
Bracket Pointer Typed Function
================================================================================

<int|string>* one() {
  return 1;
}

int|<string*> two() {
  return 1;
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (non_void_type
      (non_void_type))
    (identifier)
    (parameter_list)
    (block
      (return_statement
        (number_literal))))
  (function_definition
    (non_void_type
      (non_void_type))
    (identifier)
    (parameter_list)
    (block
      (return_statement
        (number_literal)))))
