test/corpus/char_literals.txt
================================================================================
Char Literals
================================================================================

int y = 'A';
int yy = '\n';
int yyy = '\11';
int yyyy = '\0x10';
int yyyyy = '\x10';
int yyyyyy = '\0o444';
int yyyyyyy = '\0b111';

--------------------------------------------------------------------------------

(source_file
  (global_var
    (non_void_type)
    (assignment_expression
      (identifier)
      (assignment_operator)
      (char_literal)))
  (global_var
    (non_void_type)
    (assignment_expression
      (identifier)
      (assignment_operator)
      (char_literal
        (escape_sequence))))
  (global_var
    (non_void_type)
    (assignment_expression
      (identifier)
      (assignment_operator)
      (char_literal
        (escape_sequence))))
  (global_var
    (non_void_type)
    (assignment_expression
      (identifier)
      (assignment_operator)
      (char_literal
        (escape_sequence))))
  (global_var
    (non_void_type)
    (assignment_expression
      (identifier)
      (assignment_operator)
      (char_literal
        (escape_sequence))))
  (global_var
    (non_void_type)
    (assignment_expression
      (identifier)
      (assignment_operator)
      (char_literal
        (escape_sequence))))
  (global_var
    (non_void_type)
    (assignment_expression
      (identifier)
      (assignment_operator)
      (char_literal
        (escape_sequence)))))
