test/corpus/closure.txt
================================================================================
Closure Test
================================================================================

closure x = #'write;

closure x2 = #'efun::write;

closure x3 = #'sefun::write;

closure x4 = #'lfun::write;

closure x5 = #'var::x;

--------------------------------------------------------------------------------

(source_file
  (global_var
    (non_void_type)
    (identifier)
    (closure))
  (global_var
    (non_void_type)
    (identifier)
    (closure))
  (global_var
    (non_void_type)
    (identifier)
    (closure))
  (global_var
    (non_void_type)
    (identifier)
    (closure))
  (global_var
    (non_void_type)
    (identifier)
    (closure)))
