test/corpus/complex_default_visibility.txt
================================================================================
Complex Default Visibility
================================================================================

default private variables public functions;

--------------------------------------------------------------------------------

(source_file
  (default_visibility
    (type_modifier)
    (inheritance_scope)
    (type_modifier)
    (inheritance_scope)))
