test/corpus/coroutine_call.txt
================================================================================
Coroutine Call
================================================================================

coroutine cb;

async void cool() {
  yield();
}

async int whatev(int arg = 1) {
  yield(99);
}

void x() {
  await(cool());
}

int bar = await(whatev(9));

--------------------------------------------------------------------------------

(source_file
  (global_var
    (non_void_type)
    (identifier))
  (function_definition
    (async_modifier)
    (identifier)
    (parameter_list)
    (block
      (expression_statement
        (yield_expression))))
  (function_definition
    (async_modifier)
    (non_void_type)
    (identifier)
    (parameter_list
      (parameter
        (non_void_type)
        (identifier)
        (number_literal)))
    (block
      (expression_statement
        (yield_expression
          (number_literal)))))
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (expression_statement
        (await_expression
          (function_call
            (identifier)
            (argument_list))))))
  (global_var
    (non_void_type)
    (identifier)
    (await_expression
      (function_call
        (identifier)
        (argument_list
          (number_literal))))))
