test/corpus/empty_array_literal.txt
================================================================================
Empty Array Literal Test
================================================================================

int *x = ({ });

--------------------------------------------------------------------------------

(source_file
  (global_var
    (non_void_type)
    (identifier)
    (array_literal)))
