test/corpus/empty_for_loop.txt
================================================================================
Empty For Loop
================================================================================

x() {
  for(;;) {
    printf("ok!");
  }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (for_statement
        (block
          (expression_statement
            (function_call
              (identifier)
              (argument_list
                (string_literal)))))))))
