test/corpus/for_loop.txt
================================================================================
For Loop
================================================================================

x() {
  for(int i = 0; i <= 10; i ++) {
    printf("ok!");
    printf("ok!");
  }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (for_statement
        (non_void_type)
        (identifier)
        (number_literal)
        (binary_expression
          (identifier)
          (number_literal))
        (update_expression
          (identifier))
        (block
          (expression_statement
            (function_call
              (identifier)
              (argument_list
                (string_literal))))
          (expression_statement
            (function_call
              (identifier)
              (argument_list
                (string_literal)))))))))
